pnmdec: Added PBM Support

https://bugzilla.gnome.org/show_bug.cgi?id=730523